--- a/imagens/css/estilos.css
+++ b/imagens/css/estilos.css
@@ -80,3 +80,18 @@ article > ul > li{
 article > footer{
     text-align: center;
 }
+
+.botao{
+    display: inline-block;
+    background-color: #127d00;
+    color:#fff;
+    padding:12px 16px;
+    text-decoration: none;
+}
+
+/*Duas vezes dois pontos é um pseudo elemento um vez dois pontos uma pseudo classe*/
+/*Modificando a cor do botão quando passamos o mouse por cima ou quando utilizamos a tecla TAB do teclado*/
+
+.botao:hover, .botao:focus{
+    background-color: #0e6400;
+}
