--- a/imagens/css/estilos.css
+++ b/imagens/css/estilos.css
@@ -27,7 +27,7 @@ header  img{
 
     /*ajustando o container dentro do header*/
     
-    width:1200px;
+    width:100%;
     margin: 0 auto;
     padding-left:15px;
     padding-right:15px;
@@ -35,11 +35,28 @@ header  img{
 
 article{
     border:1px solid #95a4a5;
-    width:350px;
+    
     padding:10px;
-    float:left;
-    margin-right: 30px;
+    
 
+}
+
+/* Exemplo com outro valor fazendo mudança de cor ao atingir os 600px
+@media (min-width: 600px){
+    article{
+        background-color: yellow;
+    }
+}
+*/
+
+
+/*Regra criada para quando a tela estiver neste caso a partir de 800px ele modificar o CSS para o código inserido dentro do @media (vai ajustar os elementos na tela dos dispositivos / Podemos inserir quatos @media forem necessários. Obs.: os valores inseridos baixo estavam no código acima e foram inseridos no @media mas não alteram o visual em telas maiores como estavam antes*/
+@media (min-width: 900px){
+    article{
+        width:30%;
+        float:left;
+        margin-right: 3%;
+    }
 }
 
 /*Recurso utilizado após alinhas as caixas com os planos: Inserindo o after na caixa planos eu reservo todo o box para o conteúdo dele, qualquer texto ou elemento inserido depois, vai dicar abaixo*/
