--- a/imagens/css/estilos.css
+++ b/imagens/css/estilos.css
@@ -23,15 +23,17 @@ header  img{
     padding: 80px 0;
 }
 
+/*
 .container{
-
+*/
     /*ajustando o container dentro do header*/
     
-    width:100%;
+ /*   width:100%;
     margin: 0 auto;
     padding-left:15px;
     padding-right:15px;
 }
+*/
 
 article{
     border:1px solid #95a4a5;
@@ -51,14 +53,14 @@ article{
 
 
 /*Regra criada para quando a tela estiver neste caso a partir de 800px ele modificar o CSS para o código inserido dentro do @media (vai ajustar os elementos na tela dos dispositivos / Podemos inserir quatos @media forem necessários. Obs.: os valores inseridos baixo estavam no código acima e foram inseridos no @media mas não alteram o visual em telas maiores como estavam antes*/
-@media (min-width: 900px){
+/*@media (min-width: 900px){
     article{
         width:30%;
         float:left;
         margin-right: 3%;
     }
 }
-
+*/
 /*Recurso utilizado após alinhas as caixas com os planos: Inserindo o after na caixa planos eu reservo todo o box para o conteúdo dele, qualquer texto ou elemento inserido depois, vai dicar abaixo*/
 #planos::after{
     content: "";
