--- a/imagens/base.css
+++ b/imagens/base.css
@@ -1,3 +1,10 @@
+/*Ao determinar o tamanho da fonte padrão do arquivo HTML aqui, eu forcei o navegador trabalhar com o padrão de 16px do navegador e com isso ajustar os demais tamanhos com EM ou REM*/
+
+html{
+    font-size:100%;
+}
+
+
 /*Este seletor define de forma geral qualquer instrução que for inserida nele, o Border-box vai padronizar todas as caixas sem precisar calcular as diferenças */
 * {
     box-sizing:border-box;
@@ -6,5 +13,5 @@
 body{
     margin:0;
     font-family:Arial, Helvetica, sans-serif;
-    font-size:14px;
+    font-size:1.4rem;
 }
