--- a/imagens/componentes.css
+++ b/imagens/componentes.css
@@ -6,6 +6,8 @@
     border:1px solid #95a4a5;
     
     padding:10px;
+
+    font-size: 0.875rem;
     
 
 }
@@ -19,12 +21,12 @@
     margin: -10px;
     margin-bottom: 2px;
     font-weight: normal;
-    font-size: 28px;
+    font-size: 2em;
 }
 
 .plano__preco{
     text-align: center;
-    font-size: 28px;
+    font-size: 2em;
     margin: 20px 0;
 }
 
@@ -32,6 +34,8 @@
     list-style: none;
     padding: 0; /*Padding 0px para ajustar corretamente n cixa quando for centralizar*/
     margin: 20px 0;
+
+    font-size: 1em;
 }
 
 .plano__caracteristicas > li{
@@ -72,4 +76,56 @@
 /*No modificar foi inserido o hover e focus para dar os devido efeitos quando passar o mouse e clicar nos botões */
 .botao--assinar:hover, .botao--assinar:focus{
     background-color: #0e6400;
+}
+
+.botao--principal{
+
+    border-radius: 10px;
+    background-color: #004b86;
+}
+
+.botao--principal:hover, .botao--principal:focus{
+    background-color: #003b6a;
+}
+
+
+/*---------------*\
+      CHAMADA
+\*---------------*/
+
+.chamada{
+    font-size: 1.6rem;
+
+    text-align: center;
+}
+
+.chamada__titulo{
+    margin: 0;
+
+    color: #fff;
+
+    font-size: 3.375em; /*54px / 16px = 3.375*/
+    line-height: 0.9; /*Altura da linha*/
+    text-shadow: 1px 1px #313131;
+}
+
+.chamada__subtitulo{
+    margin: 60px 0;
+    
+    color: #fff;
+
+    font-size:1em;       
+}
+
+.chamada__acao{
+    font-size: 1em;
+}
+
+@media(min-width: 992px){
+    .chamada{
+        padding-left: 10%;
+        padding-right: 10%;
+
+        font-size: 2.2rem;
+    }
 }
