--- a/imagens/componentes.css
+++ b/imagens/componentes.css
@@ -129,3 +129,61 @@
         font-size: 2.2rem;
     }
 }
+
+/*---------------*\
+      DEPOIMENTO
+\*---------------*/
+
+.depoimento{
+    font-size: 2.2rem;
+}
+
+
+/*Ajuste para dispositivos menores*/
+@media(min-width: 992px){
+    .depoimento{
+        /*espaço interno do depoimento*/
+        padding-left: 15%;
+        padding-right: 15%;
+
+        font-size: 2.8rem;
+    }
+}
+
+.depoimento > blockquote{
+    margin: 0;
+    padding: 0 60px;
+
+    text-align: center;
+    font-size: 1em;
+}
+
+.depoimento__autor{
+    margin-top: 40px;
+
+    text-align: center;
+    font-size: 0.8181em;
+
+}
+
+.depoimento__autor > img{
+    border-radius:50%;
+}
+
+.depoimento__autor > p{
+    margin-top: 10px;
+}
+
+
+/*---------------*\
+    RODAPE
+\*---------------*/
+
+.layout-rodape{
+    padding: 40px 0;
+
+    background-color: #484848;
+
+    color: #fff;
+    text-align: center;
+}
