--- a/imagens/componentes.css
+++ b/imagens/componentes.css
@@ -79,6 +79,7 @@
     color:#fff;
     padding:12px 16px;
     text-decoration: none;
+    line-height: normal; /*Aqui foi inserido um line-height normal para não herdar o line-heigth da classe .menu__item onde está o botão deste menu*/
 }
 
 /*Duas vezes dois pontos é um pseudo elemento um vez dois pontos uma pseudo classe*/
@@ -92,11 +93,15 @@
 
 
 /*Aqui foi criado um modificador para o botão*/
-.botao--assinar{
+
+/*Durante o projeto foi inserida a classe botao--login do menu, pois terá o mesmo efeito e com isso não é necessário criar um novo código*/
+.botao--assinar, .botao--login{
     background-color: #127d00;
 }
 /*No modificar foi inserido o hover e focus para dar os devido efeitos quando passar o mouse e clicar nos botões */
-.botao--assinar:hover, .botao--assinar:focus{
+
+/*Durante o projeto foi inserida a classe botao--login do menu, pois terá o mesmo efeito e com isso não é necessário criar um novo código*/
+.botao--assinar:hover, .botao--assinar:focus, .botao--login:hover, .botao--login:focus{
     background-color: #0e6400;
 }
 
@@ -223,6 +228,63 @@
 .navegacao__menu{
     float: right;
 }
+
+/*---------------*\
+  BOTAO-CHAVEADOR
+\*---------------*/
+.botao-chaveador{
+    width: 24px;
+    height: 24px;
+
+    border: 0; /*Removendo a borda que apareceu na imagem do menu*/
+
+    background-image: url("menu-navegacao.png");
+}
+
+/*Com essa media eu informo que o botão chaveador vai aparecer após o ajuste de tela nesta medida*/
+@media(min-width: 992px){
+    .botao-chaveador{
+        display:none;
+    }
+}
+
+
+/*---------------*\
+    MENU
+\*---------------*/
+
+.menu{
+    position: fixed; /*Vai rolar a página e o menu ficará estático*/
+    top:0;
+    left: 0;
+    bottom:0;
+
+    width: 200px;
+    margin:0;
+    padding: 20px;
+    border: 1px solid #eee;
+    
+    list-style: none;
+
+    font-size: 1.4rem;
+
+    background-color: #fbfbfb;
+
+    
+}
+
+.menu__item{
+    display: block;
+
+    line-height: 3;
+}
+
+/*Ajustando o botão do menu de forma individual*/
+.menu__item--botao{
+    margin-top:20px;
+}
+
+
 
 
 /*---------------*\
